<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/flight_fragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
        >
    <EditText
            android:id="@+id/budget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="300 (Price is in Euros)"/>
    <EditText
            android:id="@+id/arrivalLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="London (Arriving to)"
            android:layout_below="@id/budget"/>
    <EditText
            android:id="@+id/departureLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Milan (Departing from)"
            android:layout_below="@id/arrivalLocation"/>
    <RelativeLayout
            android:id="@+id/flight_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/departureLocation">
        <TextView
                android:id="@+id/flight_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/flight_label"
                style="@style/Label"/>
        <RadioGroup
                android:id="@+id/flight_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/flight_label">
            <RadioButton
                    android:id="@+id/one_way_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_way_label"
                    style="@style/Label"/>
            <RadioButton
                    android:id="@+id/return_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/return_label"
                    style="@style/Label"/>
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/dates_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flight_layout">
        <TextView
                android:id="@+id/date_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dates_label"
                style="@style/Label"/>
        <RadioGroup
                android:id="@+id/dates_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/date_label">
            <RadioButton
                    android:id="@+id/flexible_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flexible_dates_label"
                    style="@style/Label"/>
            <RadioButton
                    android:id="@+id/fixed_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/fixed_dates_label"
                    style="@style/Label"/>
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dates_layout">
        <RelativeLayout
                android:id="@+id/flexible_dates_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temporary flexible dates holder"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/fixed_dates_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temporary fixed dates holder"/>
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>